# webllm

./: .gitignore  .pre-commit-config.yaml  AUDIT-REMEDIATION-PLAN.md  AUDIT-REMEDIATION.md  AUDIT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  ENHANCEMENTS.md  Makefile  README.md  TODO.md  TODO_ARCHIVE.md  biome.json  bunfig.toml  handoff.md  log_receiver.py  package.json  playwright.config.ts  tsconfig.json  tsconfig.test.json
.github/workflows/: ci.yml
bench/: character.bench.ts  generation.bench.ts  gguf-parser.bench.ts  helpers.ts  kv-cache.bench.ts  memory-pool.bench.ts  run.ts  sampler.bench.ts  scheduler.bench.ts  stream-router.bench.ts  tokenizer.bench.ts  tool-system.bench.ts
docs/: BENCHMARKS.md  CHAT_PAGE.md  LLAMA_CPP_PATCHES.md  MODEL_SUPPORT.md  RELEASING.md
docs/fable/: ENH-001-playwright-browser-lane.md  ENH-002-streaming-chat-api.md  ENH-003-kv-memory-accounting.md  ENH-004-conversation-turn-runner.md  ENH-005-kv-multiplex-probe.md  ENH-006-bench-session-persistence.md  ENH-007-no-ingest-flag.md  ENH-008-eval-dead-code-sweep.md
docs/reference/: environment.md
docs/superpowers/plans/: 2026-04-20-webllm-implementation.md  2026-04-22-matmul-tuning-followup-plan.md  2026-04-27-encoder-perf-pass.md  2026-04-27-spec-decode-v2-tile128.md  2026-04-28-encoder-non-bert-arch.md  2026-04-28-memory64-cap-probe.md  2026-04-28-memory64-full-migration.md  2026-04-28-prefill-tile-heuristic.md  2026-04-29-embedding-bucket-c-implementation.md  2026-04-29-embedding-bucket-c-phase-0-probe.md  2026-04-29-embedding-bucket-d.md  2026-04-29-phi3-causal-lm-support.md  2026-04-29-ts-api-audit-followups.md  2026-04-30-embedding-bucket-d-phi3.md  2026-05-03-chat-page.md  (+8 more)
eval/: bench.ts  browser-eval.ts  browser-smoke.ts  causal-embedder-parity.ts  chat-smoke-matrix.ts  chat-smoke.ts  cli.ts  embed-perf.ts  encoder-parity.ts  import-reports.ts  live-client.ts  live-db.ts  live-events.ts  live-server.ts  models.ts  perf.ts  report-html.ts  report-template.html  report.ts  runner.ts  scorer.ts  smoke-profiles.ts  smoke-runs.ts  smoke-serve.ts  types.ts
eval/fixtures/: embed-prompts.ts  long-prompts.ts
eval/probes/: probe-9a-prefill-prefix.ts  probe-9b-batched-vs-seq.ts  probe-9c-hitch-warmup.ts  probe-9d-worker-hitch.ts  probe-prefix-cache-at-scale-2026-05-01.ts  probe-prefix-cache-fork-2026-05-02.ts  probe-prefix-cache-interleaved-2026-05-02.ts  probe-prefix-cache-validation-2026-05-01.ts
eval/reports/: 2026-04-23T15-01-49-174Z-hermes-3-llama-3.2-3b-q4f16.html  README.md  embed-perf-baseline-cosine.json
eval/tasks/: embedding.ts  instruction.ts  reasoning.ts  scorer-registrations.ts  semantic-reasoning.ts  tool-calling.ts
logs/: qwen3-0.6b-pre.txt  qwen3-8b-drafted.txt  qwen3-8b-pre.txt  tinyllama-pre.txt
scripts/: build-package.ts  check-jspi-exports.ts  check-skip-count.ts  extract-bert-vocab.ts  fix-mem64-bindgroup-shim.py  generate-bert-golden.py
smoke-test/: chat-conversation.js  chat-metrics.d.ts  chat-metrics.js  chat-models.js  chat-page.js  chat-persistence.d.ts  chat-persistence.js  chat-render.d.ts  chat-render.js  chat-restore.d.ts  chat-restore.js  chat-settings.d.ts  chat-settings.js  chat.css  chat.html  dashboard-charts.d.ts  dashboard-charts.js  dashboard.css  dashboard.html  dashboard.js  fa-prefill-probe-page.js  fa-prefill-probe.html  frame-probe.js  index.html  inputs-longctx.json  mem64-probe.html  p0-spike.html  p0-spike.js  p0-spike.src.ts  p1-fixture-regen.html  p1-fixture-regen.js  p1-fixture-regen.src.ts  p1-tokenizer-parity.html  p1-tokenizer-parity.js  p1-tokenizer-parity.src.ts  p2-v2-offload-probe.html  p2-v2-offload-probe.js  p2-v2-offload-probe.src.ts  p2-v2-ref-probe.html  p2-v2-ref-probe.js  (+22 more)
src/: index-jsep.ts  index.ts  internal.ts
src/characters/: character-manager.ts  character.ts  tool-system.ts
src/core/: chat-types.ts  conversation-pool.ts  engine.ts  errors.ts  game-loop.ts  memory-pool.ts  model-manager.ts  persistence.ts  pipeline-cache.ts  sampling-profiles.ts  scheduler.ts  types.ts  webllm-error-codec.ts  webllm-proxy.ts  webllm-worker-host.ts  worker-bridge.ts
src/evaluation/: custom-scorers.ts  runner.ts  scorer.ts  system-profile.ts  types.ts
src/inference/: causal-embedder-inference.ts  chat-template.ts  encoder-inference.ts  generation.ts  ggml-wasm.ts  lightweight.ts  llama-bridge.ts  llama-decode-wrapper.ts  llama-tokenizer.ts  model-inference-diagnostics.ts  model-inference.ts  sampler.ts  speculative.ts  stream-router.ts  tokenizer.ts  wgsl-shaders.ts
src/models/: gguf-parser.ts  gguf-types.ts  inference-session.ts  kv-cache.ts  model-loader.ts
src/persistence/: indexeddb-store.ts
src/wasm/: CMakeLists.txt  exports.def  webgpu-bridge.cpp
tests/: browser-smoke.test.ts  causal-embedder-inference.test.ts  character-manager.test.ts  character-set-tools.test.ts  character.test.ts  chat-completion-conversation.test.ts  chat-metrics-context-bar.test.ts  chat-persistence-schema.test.ts  chat-render-markdown.test.ts  chat-smoke-matrix.test.ts  chat-template-gemma4.test.ts  chat-template-special-tokens.test.ts  chat-template.test.ts  conversation-pool.test.ts  cosine-similarity.test.ts  custom-scorers.test.ts  dashboard-charts.test.ts  embed-api.test.ts  encoder-cosine-parity.test.ts  encoder-inference.test.ts  engine-conversation-lifecycle.test.ts  engine-conversation-persistence.test.ts  engine-streaming-api.test.ts  engine-tokenize.test.ts  engine.test.ts  errors.test.ts  eval-models.test.ts  fa-mode-config.test.ts  forward-verify-equivalence.test.ts  fused-contiguity-assert.test.ts  game-loop.test.ts  generation-config-public.test.ts  generation.test.ts  ggml-wasm.test.ts  gguf-parser-array-readers.test.ts  gguf-parser.test.ts  gguf-types.test.ts  inference-session.test.ts  jsep-buffer-roundtrip.test.ts  jsep-matmul-golden.test.ts  (+50 more)
tests-browser/: smoke.spec.ts
tests/fixtures/: bert-wordpiece-golden.json  bert-wordpiece-vocab.json
tests/inference/: chat-template-gemma4.test.ts
tests/models/: gguf-parser-array-readers.test.ts  model-loader-gemma2-hparams.test.ts  model-loader-gemma4-hparams.test.ts
(+312 files in other folders)
